Fixed Spacing Alignment for AboutUs component

--- a/src/components/About/AboutTesto/AboutPromo1/AboutPromo1.css
+++ b/src/components/About/AboutTesto/AboutPromo1/AboutPromo1.css
@@ -1,4 +1,5 @@
 .food-icon-size {
-    max-width: 4.375rem;
-    margin: 1.875rem;
+    max-width: 4.5vmax;
+    min-width: 2.875rem;
+    margin: 1.5rem;
 }
