--- a/src/components/About/AboutTesto/AboutPromo2/AboutPromo2.css
+++ b/src/components/About/AboutTesto/AboutPromo2/AboutPromo2.css
@@ -1,5 +1,6 @@
 #about-promo2 p {
     font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     line-height: 1.5;
     font-size: 1.125rem;
 }
