--- a/src/components/Shared/Subscription/Subscription.css
+++ b/src/components/Shared/Subscription/Subscription.css
@@ -1,6 +1,5 @@
 #subscription {
-    margin-top: 6.25rem;
-    margin-bottom: 4.375rem;
+    margin-top: 5rem;
     padding: 2.1875rem;
     border-radius: 0.625rem;
     background-color: #F6F9FA;
